--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -10,9 +10,14 @@
       <div class="tab"><a href="update">Update Channel</a></div>
     </div>
     <div class="main">
-      <p>Welcome to the incident management tool.</p>
-      <p>Click <strong>Create Channel</strong> to create a new incident management channel.</p>
-      <p>Click <strong>Update Channel</strong> to post an update to an existing channel.</p>
+      <form class="formContainer">
+        <div class="formRow">
+          <label>Channel name:</label>
+          <input type="text" value="">
+        </div>
+        <div class="formRow">
+          <input type="button" value="Create Channel">
+        </div>
     </div>
   </div>
 </body>
