--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -13,7 +13,7 @@
     <form class="formContainer">
       <div class="formRow">
         <label>Incident channel:</label>
-        <select></select>
+        <span th:text="${channel.displayName}"/>
       </div>
       <div class="formRow">
         <label>Update message:</label>
