Renamed some methods and endpoints

--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -9,7 +9,7 @@
     <div class="tab"><a href="/">Create Channel</a></div>
   </div>
   <div class="main">
-    <form class="formContainer" action="#" th:action="@{/create}" method="post">
+    <form class="formContainer" action="#" th:action="@{/channel}" method="post">
       <div class="formRow">
         <label>Team:</label>
         <select size="5" name="team">
